@@ -57,7 +57,7 @@ Name of a change that is required by the new change. May be specified multiple
 times. See L<sqitchchanges> for the various ways in which changes can be
 specified.
 
-=item C<-c>
+=item C<-x>
 
 =item C<--conflicts>
 
