@@ -75,9 +75,9 @@ can_ok $CLASS, qw(
 );
 
 is_deeply [$CLASS->options], [qw(
-    change-name|change|a=s
+    change-name|change|c=s
     requires|r=s@
-    conflicts|c=s@
+    conflicts|x=s@
     note|n|m=s@
     template-name|template|t=s
     template-directory=s
