@@ -65,6 +65,9 @@ Revision history for Perl extension App::Sqitch
      - Added the `--tag` and `--change` options to the `tag` command to
        distinguish the tag to be added, as well as the change to which to
        apply it, from plan-specifying arguments, if necessary.
+     - Changed the short variant of `--conflicts` from `-c` to `-x`, because
+       `-c` is now used as the short variant for `--change` (and `--conflicts`
+       has almost certainly never been used, anyway).
 
 0.999  2015-02-12T19:43:45Z
      - Improved MySQL missing table error detection by relying on error codes
